welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:8: error: illegal start of simple expression
  if (b%1>=0.5){
  ^